--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@
     }
 
     async function getUserProfile() {
+        const profile = await liff.getProfile()
+        document.getElementById("pictureUrl").src = profile.pictureUrl
+        document.getElementById("userId").append(profile.userId)
+        document.getElementById("statusMessage").append(profile.statusMessage)
+        document.getElementById("displayName").append(profile.displayName)
+        
+
     }
 
     function getEnvironment() {
@@ -97,7 +104,7 @@
         await liff.init({ liffId: "1654188264-Pj3bxJ1m" })
         getEnvironment()
         
-      // getUserProfile()
+        getUserProfile()
       // getContext()
       // getFriendship()
       // createUniversalLink()
