--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
         document.getElementById("userId").append(profile.userId)
         document.getElementById("statusMessage").append(profile.statusMessage)
         document.getElementById("displayName").append(profile.displayName)
-        
+
+        document.getElementById("decodeIDToken").append(liff.getDecodedIDToken().email)
+
 
     }
 
