--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
   <p id="userId"><b>userId:</b> </p>
   <p id="displayName"><b>displayName:</b> </p>
   <p id="statusMessage"><b>statusMessage:</b> </p>
+
   <p id="decodedIDToken"><b>email:</b> </p>
+
+
   <p id="type"><b>type:</b> </p>
   <p id="viewType"><b>viewType:</b> </p>
   <p id="utouId"><b>utouId:</b> </p>
@@ -71,6 +74,13 @@
     }
 
     function getContext() {
+        document.getElementById("type").append(liff.getContext().type)
+        document.getElementById("viewType").append(liff.getContext().viewType)
+        document.getElementById("utouId").append(liff.getContext().utouID)
+        document.getElementById("roomId").append(liff.getContext().roomId)
+        document.getElementById("groupId").append(liff.getContext().groupID)
+        
+
     }
 
     async function getUserProfile() {
@@ -107,7 +117,7 @@
         getEnvironment()
         
         getUserProfile()
-      // getContext()
+        getContext()
       // getFriendship()
       // createUniversalLink()
     }
