--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
     function getContext() {
         document.getElementById("type").append(liff.getContext().type)
         document.getElementById("viewType").append(liff.getContext().viewType)
-        document.getElementById("utouId").append(liff.getContext().utouID)
+        document.getElementById("utouId").append(liff.getContext().utouId)
         document.getElementById("roomId").append(liff.getContext().roomId)
-        document.getElementById("groupId").append(liff.getContext().groupID)
+        document.getElementById("groupId").append(liff.getContext().groupId)
         
 
     }
