--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     async function sendMsg() {
         if (liff.getContext().type !== "none") {
             await liff.sendMessage([
-                {
+                {// max 5 bubbles
                     "type": "sticker",
                     "stickerId": 1,
                     "packageId": 1
