--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
             ])
             alert("Message sent")
         }
+        alert("Message sent2")
     }
 
     function getContext() {
