--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     }
 
     async function sendMsg() {
-        if (liff.getContext().type !== "none") {
+        /*if (liff.getContext().type !== "none") {
             await liff.sendMessage([
                 {// max 5 bubbles
                     "type": "sticker",
@@ -80,7 +80,7 @@
                 }
             ])
             alert("Message sent")
-        }
+        }*/
         alert("Message sent2")
     }
 
