--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     }
 
     async function sendMsg() {
-        if (liff.getContext().viewType !== "none") {
+        if (liff.getContext().type !== "none") {
             await liff.sendMessage([
                 {// max 5 bubbles
                     "type": "sticker",
