--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     }
 
     async function sendMsg() {
+        alert("Message sent2")
         if (liff.getContext().type !== "none") {
             await liff.sendMessage([
                 {// max 5 bubbles
