--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
             ])
             alert("Message sent")
         }
+        else {
+            alert("Message unsend")
+        }
+
     }
 
     function getContext() {
@@ -135,8 +139,8 @@
         
         getUserProfile()
         getContext()
-        sendMsg()
-      // getFriendship()
+
+        getFriendship()
       // createUniversalLink()
     }
     main()
