--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       function openWindow() {
           liff.openWindow({
               url: "https://line.me",
-              external: true
+              external: false
           })
     }
 
