--- a/index.html
+++ b/index.html
@@ -150,7 +150,10 @@
             getContext()
 
             getFriendship()
+        } else {
+            liff.login()
         }
+        
         
       // createUniversalLink()
     }
