--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
     async function shareMsg() {
     }
 
-    function logOut() {
+      function logOut() {
+          liff.logout()
+          window.location.reload()
     }
 
     function closed() {
