--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
     }
 
     async function shareMsg() {
+        await liff.shareTargetPicker([
+            {
+                "type": "text",
+                "text": "This message bla bla bla"
+            }
+        ])
     }
 
       function logOut() {
